[gd_scene load_steps=7 format=3 uid="uid://drjxqg6njqe0h"]

[ext_resource type="Theme" uid="uid://y72soc2heqau" path="res://themes/theme.tres" id="1_vafp5"]
[ext_resource type="StyleBox" uid="uid://dvn8b501xre75" path="res://resources/instances/h_selector_panel_style.tres" id="2_1hlqb"]
[ext_resource type="Script" path="res://scenes/_shared/ui/h_selector.gd" id="2_psdub"]
[ext_resource type="AudioStream" uid="uid://dyt3rdtjacitn" path="res://audio/ui/ui_move.wav" id="4_7hotm"]
[ext_resource type="AudioStream" uid="uid://cy4oo6qa36pqb" path="res://audio/ui/ui_pressed_disabled.wav" id="5_605ui"]
[ext_resource type="AudioStream" uid="uid://b8aj3or3hlqt8" path="res://audio/ui/ui_pressed.wav" id="5_m8ma7"]

[node name="HSelector" type="PanelContainer"]
offset_right = 132.0
offset_bottom = 22.0
focus_mode = 2
mouse_filter = 2
theme = ExtResource("1_vafp5")
theme_override_styles/panel = ExtResource("2_1hlqb")
script = ExtResource("2_psdub")
selector_text = "Example"
focus_sound = ExtResource("4_7hotm")
next_option_sound = ExtResource("4_7hotm")
selection_sound = ExtResource("5_m8ma7")
cannot_go_next_option_sound = ExtResource("5_605ui")

[node name="LabelContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme = ExtResource("1_vafp5")
theme_override_constants/separation = 0

[node name="NameLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
vertical_alignment = 1

[node name="PrevOptionLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 16
vertical_alignment = 1

[node name="OptionLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 16
vertical_alignment = 1

[node name="NextOptionLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 16
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
